fix document upload issue by using Restful API instead of Admin SDK
